--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <!-- test -->
   <h2>Front-End Developer</h2>
   <h1>Khyzhniak Maryna</h1>
   <h2 class="education_title">Education</h2>
