--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!-- <!doctype html>
 <html lang="en">
 
 <head>
@@ -64,36 +64,216 @@
               </div>
 
               <!-- новый блок div -->
-              <div class="inside-circle">(B1)</div>
-            </div>
+<!-- <div class="inside-circle">(B1)</div>
+</div>
 
-          </div>
-        </li>
-        <li>Français (B1 - en cours d'apprentissage)</li>
-      </dd>
-    </dl>
-  </section>
-  <section>
-    <h2>Experience</h2>
-    <p>Responsable comptable Foxtrot - Gostomel Septembre 2018 - Avril 2022</p>
-    <p>Responsable de boutique en ligne Entreprise indépendante Koulikov Kiev, Ukraine
-      Janvier 2017 - Août 2018</p>
-  </section>
-  <section>
-    <h2>Contacts</h2>
-    <p>C: +7 777 777 77 77
-      E: chornyiav@gmail.com</p>
-  </section>
-  <section>
-    <h2>Projects</h2>
-    <ul>
-      <li>https://hellenglish.goit.education/ .................. [ HTML5, CSS3 ]</li>
-      <li>https://cryptohub.goit.education/ .................... [ JavaScript ]</li>
-      <li>https://kidslike.goit.education/ .......................... [ React.js, Node.js ]</li>
-    </ul>
-  </section>
-  <div id="app"></div>
-  <script type="module" src="/main.js"></script>
+</div>
+</li>
+<li>Français (B1 - en cours d'apprentissage)</li>
+</dd>
+</dl>
+</section>
+<section>
+  <h2>Experience</h2>
+  <p>Responsable comptable Foxtrot - Gostomel Septembre 2018 - Avril 2022</p>
+  <p>Responsable de boutique en ligne Entreprise indépendante Koulikov Kiev, Ukraine
+    Janvier 2017 - Août 2018</p>
+</section>
+<section>
+  <h2>Contacts</h2>
+  <p>C: +7 777 777 77 77
+    E: chornyiav@gmail.com</p>
+</section>
+<section>
+  <h2>Projects</h2>
+  <ul>
+    <li>https://hellenglish.goit.education/ .................. [ HTML5, CSS3 ]</li>
+    <li>https://cryptohub.goit.education/ .................... [ JavaScript ]</li>
+    <li>https://kidslike.goit.education/ .......................... [ React.js, Node.js ]</li>
+  </ul>
+</section>
+<div id="app"></div>
+<script type="module" src="/main.js"></script>
+</body>
+
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>CV</title>
+</head>
+
+<body>
+
+  <div class="resume-box">
+
+    <div class="left-section">
+      <div class="profile">
+        <img src="./images/image-girl.jpeg" alt="Photo girl" class="profile-img">
+        <div class="blue-box"></div>
+      </div>
+      <h2 class="name">Maryna<br><span>Khyzhniak</span></h2>
+      <p class="n-p">Web-Developper</p>
+
+      <div class="info">
+        <p class="heading">Info</p>
+        <p class="p1"><span class="span1"><img src="images/free-icon-pin-503080.png" alt=""></span> Adresse
+          <span><br>Mont-Saint-Guibert, <br>rue de Blanmont, 17</span>
+        </p>
+        <p class="p1"><span class="span1"><img src="./images/free-icon-telephone-9149077.png" alt=""></span> Telephone
+          <span><br>+32 473 36 81 10</span>
+        </p>
+        <p class="p1"><span class="span1"><img src="./images/free-icon-new-email-filled-envelope-60467.png"
+              alt=""></span> Email <span><br>maryfadeeva1208@gmail.com</span>
+        </p>
+      </div>
+
+      <div class="info">
+        <p class="heading">Social</p>
+        <!-- https://www.facebook.com/profile.php?id=100021046459297 -->
+        <p class="p1"><span class="span1"><img src="./images/free-icon-facebook-4494475.png" alt=""></span> Facebook
+          <span><br>https://www.facebook.com</span>
+        </p>
+        <p class="p1"><span class="span1"><img src="./images/free-icon-skype-logo-4096267.png" alt=""></span> Skype
+          <span><br>https://www.skype.com</span>
+        </p>
+        <!-- https://www.linkedin.com/in/maryna-khyzhniak-976aab207/ -->
+        <p class="p1"><span class="span1"><img src="./images/free-icon-linkedin-145807.png" alt=""></span> Linkdin
+          <span><br>https://www.linkedin.com</span>
+        </p>
+      </div>
+    </div>
+
+
+
+    <div class="right-section">
+
+      <div class="right-heading">
+        <img src="" alt="">
+        <p class="p2">Profile</p>
+      </div>
+      <p class="p3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente iure aperiam earum id est sunt
+        laboriosam dolorem ad eos molestiae.</p>
+      <div class="clearfix"></div>
+      <br><br>
+      <div class="right-heading">
+        <img src="./images/free-icon-briefcase-6964169.png" alt="">
+        <p class="p2">Experience</p>
+      </div>
+      <div class="clearfix"></div>
+      <div class="lr-box">
+        <div class="left">
+          <p class="p4">2018 - 2022</p>
+          <p class="p5">Gostomel, Ukraine</p>
+        </div>
+        <div class="right">
+          <p class="p4">Responsable comptable</p>
+          <p class="p5">Foxtrot</p>
+          <p class="p5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni, labore!</p>
+        </div>
+        <div class="clearfix"></div>
+      </div>
+
+      <div class="lr-box">
+        <div class="left">
+          <p class="p4">2017 - 2018</p>
+          <p class="p5">Kiev, Ukraine</p>
+        </div>
+        <div class="right">
+          <p class="p4">Responsable de boutique en ligne</p>
+          <p class="p5">Entreprise indépendante Koulakov</p>
+          <p class="p5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni, labore!</p>
+        </div>
+        <div class="clearfix"></div>
+      </div>
+
+      <br><br>
+      <div class="right-heading">
+        <img src="" alt="">
+        <p class="p2">Education</p>
+      </div>
+      <div class="clearfix"></div>
+      <div class="lr-box">
+        <div class="left">
+          <p class="p4">1994 - 2004</p>
+          <p class="p5">Makeevka, Ukraine</p>
+        </div>
+        <div class="right">
+          <p class="p4">Diplôme d'enseignement secondaire</p>
+          <p class="p5">Ecole №103 de Makeevka</p>
+          <p class="p5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni, labore!</p>
+        </div>
+        <div class="clearfix"></div>
+      </div>
+
+      <div class="lr-box">
+        <div class="left">
+          <p class="p4">2004 - 2009</p>
+          <p class="p5">Makeevka, Ukraine</p>
+        </div>
+        <div class="right">
+          <p class="p4">Diplôme de master d'economie</p>
+          <p class="p5">Académie Nationale de Génie Civil et d'Architecture du Donbass, Ukraine</p>
+          <p class="p5">Economie d'entreprise
+          </p>
+        </div>
+        <div class="clearfix"></div>
+      </div>
+
+      <div class="lr-box">
+        <div class="left">
+          <p class="p4">2023 - 2025</p>
+          <p class="p5">Wavre, Belgique</p>
+        </div>
+        <div class="right">
+          <p class="p4">Diplôme de BESS</p>
+          <p class="p5">Ifosup</p>
+          <p class="p5">Web developpement</p>
+        </div>
+        <div class="clearfix"></div>
+      </div>
+
+      <br><br>
+      <div class="right-heading">
+        <img src="" alt="">
+        <p class="p2">Skills</p>
+      </div>
+      <div class="clearfix"></div>
+      <div class="s-box">
+        <p class="p6">HTML</p>
+        <div id="progress"></div>
+        <p class="p6">CSS</p>
+        <div id="progress1"></div>
+      </div>
+      <div class="s-box">
+        <p class="p6">JAVASCRIPT</p>
+        <div id="progress2"></div>
+        <p class="p6">PHP</p>
+        <div id="progress3"></div>
+      </div>
+      <div class="clearfix"></div>
+
+      <br><br>
+      <div class="right-heading">
+        <img src="./images/free-icon-hobbies-4219511.png" alt="">
+        <p class="p2">Hobbies</p>
+      </div>
+      <div class="clearfix"></div>
+      <img src="./images/free-icon-rollers-882147.png" alt="" class="h-img">
+      <img src="./images/free-icon-open-book-2702134.png" alt="" class="h-img">
+      <img src="./images/free-icon-cake-6147800.png" alt="" class="h-img">
+      <img src="./images/free-icon-traveling-3656915.png" alt="" class="h-img">
+      <img src="./images/free-icon-bicycle-5566698.png" alt="" class="h-img">
+    </div>
+    <div class="clearfix"></div>
+  </div>
+
 </body>
 
 </html>
