--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="fill"></div>
               </div>
 
-              <!-- новый блок div -->
+               новый блок div -->
 <!-- <div class="inside-circle">(B1)</div>
 </div>
 
@@ -115,7 +115,7 @@
 
     <div class="left-section">
       <div class="profile">
-        <img src="./images/image-girl.jpeg" alt="Photo girl" class="profile-img">
+        <img src="/images/image-girl.jpeg" alt="Photo girl" class="profile-img">
         <div class="blue-box"></div>
       </div>
       <h2 class="name">Maryna<br><span>Khyzhniak</span></h2>
@@ -123,13 +123,13 @@
 
       <div class="info">
         <p class="heading">Info</p>
-        <p class="p1"><span class="span1"><img src="images/free-icon-pin-503080.png" alt=""></span> Adresse
+        <p class="p1"><span class="span1"><img src="/images/free-icon-pin-503080.png" alt=""></span> Adresse
           <span><br>Mont-Saint-Guibert, <br>rue de Blanmont, 17</span>
         </p>
-        <p class="p1"><span class="span1"><img src="./images/free-icon-telephone-9149077.png" alt=""></span> Telephone
+        <p class="p1"><span class="span1"><img src="/images/free-icon-telephone-9149077.png" alt=""></span> Telephone
           <span><br>+32 473 36 81 10</span>
         </p>
-        <p class="p1"><span class="span1"><img src="./images/free-icon-new-email-filled-envelope-60467.png"
+        <p class="p1"><span class="span1"><img src="/images/free-icon-new-email-filled-envelope-60467.png"
               alt=""></span> Email <span><br>maryfadeeva1208@gmail.com</span>
         </p>
       </div>
@@ -137,14 +137,14 @@
       <div class="info">
         <p class="heading">Social</p>
         <!-- https://www.facebook.com/profile.php?id=100021046459297 -->
-        <p class="p1"><span class="span1"><img src="./images/free-icon-facebook-4494475.png" alt=""></span> Facebook
+        <p class="p1"><span class="span1"><img src="/images/free-icon-facebook-4494475.png" alt=""></span> Facebook
           <span><br>https://www.facebook.com</span>
         </p>
-        <p class="p1"><span class="span1"><img src="./images/free-icon-skype-logo-4096267.png" alt=""></span> Skype
+        <p class="p1"><span class="span1"><img src="/images/free-icon-skype-logo-4096267.png" alt=""></span> Skype
           <span><br>https://www.skype.com</span>
         </p>
         <!-- https://www.linkedin.com/in/maryna-khyzhniak-976aab207/ -->
-        <p class="p1"><span class="span1"><img src="./images/free-icon-linkedin-145807.png" alt=""></span> Linkdin
+        <p class="p1"><span class="span1"><img src="/images/free-icon-linkedin-145807.png" alt=""></span> Linkdin
           <span><br>https://www.linkedin.com</span>
         </p>
       </div>
@@ -155,15 +155,17 @@
     <div class="right-section">
 
       <div class="right-heading">
-        <img src="" alt="">
+        <img src="/images/free-icon-profile-3106773.png" alt="">
         <p class="p2">Profile</p>
       </div>
-      <p class="p3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente iure aperiam earum id est sunt
-        laboriosam dolorem ad eos molestiae.</p>
+      <p class="p3">Professionnelle expérimentée avec une spécialisation en développement web. Communicative et
+        organisée, prête à collaborer et à
+        se
+        développer personnellement.</p>
       <div class="clearfix"></div>
       <br><br>
       <div class="right-heading">
-        <img src="./images/free-icon-briefcase-6964169.png" alt="">
+        <img src="/images/free-icon-briefcase-6964169.png" alt="">
         <p class="p2">Experience</p>
       </div>
       <div class="clearfix"></div>
@@ -192,10 +194,9 @@
         </div>
         <div class="clearfix"></div>
       </div>
-
-      <br><br>
+      <br>
       <div class="right-heading">
-        <img src="" alt="">
+        <img src="/images/free-icon-education-2790260.png" alt="">
         <p class="p2">Education</p>
       </div>
       <div class="clearfix"></div>
@@ -241,7 +242,7 @@
 
       <br><br>
       <div class="right-heading">
-        <img src="" alt="">
+        <img src="/images/free-icon-skills-1066334.png" alt="">
         <p class="p2">Skills</p>
       </div>
       <div class="clearfix"></div>
@@ -261,15 +262,15 @@
 
       <br><br>
       <div class="right-heading">
-        <img src="./images/free-icon-hobbies-4219511.png" alt="">
+        <img src="/images/free-icon-hobby-10472971.png" alt="">
         <p class="p2">Hobbies</p>
       </div>
       <div class="clearfix"></div>
-      <img src="./images/free-icon-rollers-882147.png" alt="" class="h-img">
-      <img src="./images/free-icon-open-book-2702134.png" alt="" class="h-img">
-      <img src="./images/free-icon-cake-6147800.png" alt="" class="h-img">
-      <img src="./images/free-icon-traveling-3656915.png" alt="" class="h-img">
-      <img src="./images/free-icon-bicycle-5566698.png" alt="" class="h-img">
+      <img src="/images/free-icon-rollers-882147.png" alt="" class="h-img">
+      <img src="/images/free-icon-open-book-2702134.png" alt="" class="h-img">
+      <img src="/images/free-icon-cake-6147800.png" alt="" class="h-img">
+      <img src="/images/free-icon-traveling-3656915.png" alt="" class="h-img">
+      <img src="/images/free-icon-bicycle-5566698.png" alt="" class="h-img">
     </div>
     <div class="clearfix"></div>
   </div>
