--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <div class="left-section">
       <div class="profile">
-        <img src="/public/images/image-girl.jpeg" alt="Photo girl" class="profile-img">
+        <img src="/images/image-girl.jpeg" alt="Photo girl" class="profile-img">
         <div class="blue-box"></div>
       </div>
       <h2 class="name">Maryna<br><span>Khyzhniak</span></h2>
